last-minute updates

--- a/leaflet.Rmd
+++ b/leaflet.Rmd
@@ -1,7 +1,9 @@
+
+
 ---
-title: "leaflet"
+title: "leaflet tutorial"
 author: "Maggie Klope"
-date: "1/5/2021"
+date: "1/12/2021"
 output: html_document
 ---
 
@@ -23,7 +25,7 @@ library(sf)
 
 ## Leaflet: Easily create interactive maps
 
-- Uses the Leaflet open-source JavaScript library
+- Uses the [Leaflet](https://leafletjs.com/index.html) open-source JavaScript library
 - Interactive zoom
 - Can be embedded into R Markdown and Shiny apps
 - Compatible with a lot of data types (data frames with lat/long columns, sp and sf package spatial objects)
@@ -31,20 +33,31 @@ library(sf)
 ### Basic Map with one point
 ```{r}
 
-# using lat/long for the CA Capitol
-ca_capitol <- leaflet() %>% # using the '%>%' pipe from tidyverse
+# Using the lat/long for the Methuselah Tree (oldest non-clonal tree in the world!)
+methuselah <- leaflet() %>% # using the '%>%' pipe from tidyverse
   addTiles() %>% # loads default baselayer map
-  addMarkers(lat = 38.576572, lng = -121.4930107, popup = "CA State Capitol") # popup will add a small window that aappear over the point
+  addMarkers(lat = 37.379444, lng = -118.161667, popup = "Methuselah Tree") # popup will add a small window that appear over the point
+
+methuselah
 
 # adding more features
-ca_capitol %>% 
+methuselah %>% 
   addProviderTiles(providers$Esri.WorldStreetMap) %>% # changes basemap
   addMiniMap() %>% # add in a second zoomed out map %>% 
   addScaleBar()
+
+# lots of different privider tiles: https://leaflet-extras.github.io/leaflet-providers/preview/
+methuselah %>% addProviderTiles(providers$Esri.WorldImagery)
+
+methuselah %>% addProviderTiles(providers$Stamen.Watercolor)
   
 ```
 
 ### Using shapefile
+
+- Audubon Society occurrence surveys
+- Includes a count of sensitive and threatened species
+- Assigns a Score value for the taxa that exceed the population threshold of 1% of global or 10% of state population
 
 ```{r}
 
@@ -57,22 +70,6 @@ birds <- st_read("ds78.shp") %>%
 bird_map <- leaflet(data = birds) %>% 
   addTiles() %>% 
   addMarkers(lat = birds$LATITUDE, lng = birds$LONGITUDE)
-
-```
-
-### Lots of different backgrounds maps you can use with addProviderTiles()
-
-[Here](https://leaflet-extras.github.io/leaflet-providers/preview/) is a link to preview all the available Provider tiles
-
-```{r}
-# from more informative
-bird_map %>% addProviderTiles(providers$Esri.WorldImagery)
-
-# to more artistic
-bird_map %>% addProviderTiles(providers$Stamen.Watercolor)
-
-# to more... metal
-bird_map %>% addProviderTiles(providers$Thunderforest.SpinalMap) # not working :(
 
 ```
 
@@ -102,70 +99,5 @@ leaflet(data = pelicans) %>%
   addMarkers(lat = pelicans$LATITUDE, 
              lng = pelicans$LONGITUDE, 
              icon = pelican_icon) # setting the icon argument to the png that we loaded
-  
-```
-
-### Using the leaflet.minicharts package, you can add figures over your map
-```{r}
-bird_matrix <- as.tibble(birds)
-
-# adding barcharts
-leaflet(data = bird_matrix) %>% 
-  addTiles() %>% 
-  addMinicharts(
-    lng = bird_matrix$LONGITUDE,
-    lat = bird_matrix$LATITUDE,
-    chartdata = bird_matrix[, c("SCORE", "THREAT")],
-    type = "bar") # just using the Score and Threat columns
-
-# adding piecharts
-leaflet(data = bird_matrix) %>% 
-  addTiles() %>% 
-  addMinicharts(
-    lng = bird_matrix$LONGITUDE,
-    lat = bird_matrix$LATITUDE,
-    chartdata = bird_matrix[, c("SCORE", "THREAT")],
-    type = "pie")
-
-# adding label
-leaflet(data = bird_matrix) %>% 
-  addTiles() %>% 
-  addMinicharts(
-    lng = bird_matrix$LONGITUDE,
-    lat = bird_matrix$LATITUDE,
-    chartdata = bird_matrix$SCORE,
-    showLabels = TRUE)
 
 ```
-
-### Maps with Polylines
-
-```{r}
-
-# loading example dataset from the leaflet package
-storm_data <- atlStorms2005
-
-# Create a continuous palette function
-palette <- colorNumeric(
-  palette = "Reds",
-  domain = storm_data$MaxWind)
-
-storm <- leaflet(storm_data) %>% 
-  addTiles() %>% 
-  # addPolylines(color = "red") %>% 
-  addPolylines(color = ~palette(MaxWind), opacity = .5) %>% 
-  addLegend(pal = palette, values = ~MaxWind, 
-            title = "Maximum Wind", 
-            opacity = .5)
-
-storm
-
-# some extra features
-storm %>% 
-  addGraticule() %>% 
-  addTerminator()
-```
-
-### Compatible with Shiny
-
-- See the leaflet_shiny_app.R file
