--- a/leaflet.Rmd
+++ b/leaflet.Rmd
@@ -1,5 +1,4 @@
 
-
 ---
 title: "leaflet tutorial"
 author: "Maggie Klope"
@@ -7,10 +6,17 @@ date: "1/12/2021"
 output: html_document
 ---
 
+## Leaflet: Easily create interactive maps
+
+- Uses the [Leaflet](https://leafletjs.com/index.html) open-source JavaScript library
+- Quick way to make interactive maps
+- Can be embedded into R Markdown and Shiny apps
+- Compatible with a lot of data types (data frames with lat/long columns, sp and sf package spatial objects)
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
-# # install packages if you have not already
+# install packages if you have not already
 # install.packages("tidyverse")
 # install.packages("leaflet")
 # install.packages("leaflet.minicharts")
@@ -23,20 +29,16 @@ library(sf)
 
 ```
 
-## Leaflet: Easily create interactive maps
-
-- Uses the [Leaflet](https://leafletjs.com/index.html) open-source JavaScript library
-- Interactive zoom
-- Can be embedded into R Markdown and Shiny apps
-- Compatible with a lot of data types (data frames with lat/long columns, sp and sf package spatial objects)
-
 ### Basic Map with one point
 ```{r}
 
 # Using the lat/long for the Methuselah Tree (oldest non-clonal tree in the world!)
 methuselah <- leaflet() %>% # using the '%>%' pipe from tidyverse
   addTiles() %>% # loads default baselayer map
-  addMarkers(lat = 37.379444, lng = -118.161667, popup = "Methuselah Tree") # popup will add a small window that appear over the point
+  addMarkers(lat = 37.379444, 
+             lng = -118.161667, 
+             label = "Oldest Tree!",
+             popup = "Methuselah Tree") # popup will add a small window that appear over the point
 
 methuselah
 
@@ -79,8 +81,8 @@ leaflet(data = birds) %>%
   addTiles() %>%
   addMarkers(lat = birds$LATITUDE, 
              lng = birds$LONGITUDE,
-             clusterOptions = markerClusterOptions()
-)
+             clusterOptions = markerClusterOptions(),
+             label = birds$NAME)
 
 ```
 
@@ -101,3 +103,67 @@ leaflet(data = pelicans) %>%
              icon = pelican_icon) # setting the icon argument to the png that we loaded
 
 ```
+
+### Using the leaflet.minicharts package, you can add figures over your map	
+```{r}	
+bird_matrix <- as.tibble(birds)
+
+# adding barcharts	
+leaflet(data = bird_matrix) %>% 	
+  addTiles() %>% 	
+  addMinicharts(	
+    lng = bird_matrix$LONGITUDE,	
+    lat = bird_matrix$LATITUDE,	
+    chartdata = bird_matrix[, c("SCORE", "THREAT")],	
+    type = "bar") # just using the Score and Threat columns	
+
+# adding piecharts	
+leaflet(data = bird_matrix) %>% 	
+  addTiles() %>% 	
+  addMinicharts(	
+    lng = bird_matrix$LONGITUDE,	
+    lat = bird_matrix$LATITUDE,	
+    chartdata = bird_matrix[, c("SCORE", "THREAT")],	
+    type = "pie")	
+
+# adding label	
+leaflet(data = bird_matrix) %>% 	
+  addTiles() %>% 	
+  addMinicharts(	
+    lng = bird_matrix$LONGITUDE,	
+    lat = bird_matrix$LATITUDE,	
+    chartdata = bird_matrix$SCORE,	
+    showLabels = TRUE)	
+```	
+
+### Maps with Polylines	
+
+```{r}	
+# loading example dataset from the leaflet package	
+storm_data <- atlStorms2005	
+
+# Create a continuous palette function	
+palette <- colorNumeric(	
+  palette = "Reds",	
+  domain = storm_data$MaxWind)	
+
+# Creating a map
+storm <- leaflet(storm_data) %>% 	
+  addTiles() %>% 	
+  # addPolylines(color = "red") %>% 	
+  addPolylines(color = ~palette(MaxWind), opacity = .5) %>% 	
+  addLegend(pal = palette, values = ~MaxWind, 	
+            title = "Maximum Wind", 	
+            opacity = .5)	
+
+storm	
+
+# some extra features	
+storm %>% 	
+  addGraticule() %>% 	
+  addTerminator()	
+```	
+
+### Compatible with Shiny	
+
+- See the leaflet_shiny_app.R file
